--- a/AnsProjects/roles/AdJoin/tasks/main.yml
+++ b/AnsProjects/roles/AdJoin/tasks/main.yml
@@ -12,7 +12,7 @@
   lineinfile:
      regexp: "#?(supersede|prepend) {{item.name}} "
      line: "{{dns_dhclient_rule}} {{item.name}} {{item.value}};"
-     dest: "{{dns_dhclient_file}}"
+     path: "{{dns_dhclient_file}}"
      state: present
   with_items:
     - { name: 'domain-name-servers', value: '{% for nameserver in dns_nameservers %}{{nameserver}}{% if not loop.last %},{% endif %}{% endfor %}' }
@@ -21,7 +21,14 @@
   when: item.value != ""
   tags: [configuration,dns]
 
-- name: Set FQDN as hostname
+#This step is nesessary to prefent sudo from throwing error and preventing normal ansible work
+- name: Set FQDN as hostname 1/2
+  lineinfile:
+   line: "127.0.1.1 {{ansible_hostname}}.{{domain_full_lowercase}}"
+   path: "/etc/hosts"
+  tags: [configuration,dns]
+
+- name: Set FQDN as hostname 2/2
   hostname: 
       name: "{{ansible_hostname}}.{{domain_full_lowercase}}"
   tags: [configuration,dns]
@@ -70,8 +77,8 @@
 
 - name: Join Active Directory
   expect:
-    command: /bin/bash -c "/usr/sbin/realm join {{ domain_full_lowercase }} -U {{ adauth_username }}"
-    responses: 
+    command: /bin/bash -c "/usr/sbin/realm join {{ domain_full_lowercase }} -U {{ adauth_username }}@{{ domain_full_lowercase }}"
+    responses:
       Password for .*: "{{ adauth_password }}"
   when: realmd_bound|failed
   register: realmd_join
@@ -123,7 +130,7 @@
 
 
 - name: Add {{ ad_sysadmin_group }} group to sudoers
-  copy: content="%{{ ad_sysadmin_group }} ALL=(ALL) ALL" dest="/etc/sudoers.d/{{ ad_sysadmin_group }}" owner=root group=root mode=044
+  copy: content="%{{ ad_sysadmin_group }}@{{ domain_full_lowercase }} ALL=(ALL) ALL" dest="/etc/sudoers.d/{{ ad_sysadmin_group }}" owner=root group=root mode=044
   when: st.stat.exists == false
   tags: [configuration,ad]
 
