--- a/drafts/test.yml
+++ b/drafts/test.yml
@@ -1,32 +1,62 @@
-- hosts: linux
+- hosts: deb2
+  become: true
+  tasks:
+    - shell: 'echo 111'
   roles:
-  -  role: ANXS.postgresql
+    - role: ANXS.postgresql
+      postgresql_version: 9.6
       postgresql_locale: 'ru_RU.UTF-8'
-      postgresql_ctype: 'ru_RU.UTF-8' 
+      postgresql_ctype: 'ru_RU.UTF-8'
       postgresql_ext_install_contrib: yes
       postgresql_databases:
-       - 'queues'
-       - 'smp'
-       - 'web_patients' 
-      postgresql_users:['uouser']
+       - name: queues
+         owner: uouser
+       - name: 'smp'
+         owner: uouser
+       - name: 'web_patients'
+         owner: uouser
+ 
+      postgresql_users: 
+       - name: uouser
+         pass: benQ1234	
+         encrypted: yes
+#      postgresql_user_privileges:
+#       - name: uouser                # user name
+#         db: queues                  # database
+#         priv: "ALL"                 # privilege string format: example: INSERT,UPDATE/table:SELECT/anothertable:ALL
+#       - name: uouser                # user name
+#         db: smp                     # database
+#         priv: "ALL"                 # privilege string format: example: INSERT,UPDATE/table:SELECT/anothertable:ALL
+#       - name: uouser                # user name
+#         db: web_patients            # database
+#         priv: "ALL"                 # privilege string format: example: INSERT,UPDATE/table:SELECT/anothertable:ALL
+
       postgresql_pg_hba_passwd_hosts:
-      - '10.0.0.0/8'
-      - '192.168.0.0/16'
-      postgresql_listen_addresses:['*']
+        - '10.0.0.0/8'
+        - '192.168.0.0/16'
+      postgresql_listen_addresses: ['*']
       postgresql_max_connections: 100
-      postgresql_shared_buffers: "{{(ansible_memtotal_mb * 0.2)|int}}"
-      postgresql_effective_cache_size: "{{(ansible_memtotal_mb * 0.75)|int}}"
-      postgresql_work_mem: "{{(ansible_memtotal_mb * 0.02)|int}}"
-      postgresql_maintenance_work_mem: "{{(ansible_memtotal_mb * 0.064)|int}}" 
-      postgresql_min_wal_size = 1GB
-      postgresql_max_wal_size = 2GB
-      postgresql_checkpoint_completion_target = 0.7
-      postgresql_default_statistics_target = 500
+      postgresql_shared_buffers: "{{(ansible_memtotal_mb * 0.2)|int}}MB"
+      postgresql_effective_cache_size: "{{(ansible_memtotal_mb * 0.75)|int}}MB"
+      postgresql_work_mem: "{{(ansible_memtotal_mb * 0.02)|int}}MB"
+      postgresql_maintenance_work_mem: "{{(ansible_memtotal_mb * 0.064)|int}}MB" 
+      postgresql_min_wal_size: 1GB
+      postgresql_max_wal_size: 2GB
+      postgresql_checkpoint_completion_target: 0.7
+      postgresql_default_statistics_target: 500
+#      postgresql_pgtune: yes
+      # Total system memory in bytes, will attempt to detect if set to "no"
+#      postgresql_pgtune_memory: no
+      # Database type, valid options are DW, OLTP, Web, Mixed, Desktop
+#      postgresql_pgtune_type: Web
+      # Maximum number of expected connections, if "no", default based on db type
+#      postgresql_pgtune_connections: "{{postgresql_max_connections}}"
       postgresql_log_checkpoints: on 
-      postgresql_log_line_prefix = '%m %p %u@%d from %h [vxid:%v txid:%x] [%i] ' 
-      postgresql_vacuum_cost_delay = 10
-      postgresql_vacuum_cost_page_hit = 1
-      postgresql_vacuum_cost_page_miss = 1
-      postgresql_vacuum_cost_page_dirty = 10
-      postgresql_vacuum_cost_limit = 1000
-      postgresql_log_min_duration_statement = 3000
+      postgresql_log_line_prefix: '%m %p %u@%d from %h [vxid:%v txid:%x] [%i] ' 
+      postgresql_lc_messages: 'en_US.UTF-8'
+      postgresql_vacuum_cost_delay: 10
+      postgresql_vacuum_cost_page_hit: 1
+      postgresql_vacuum_cost_page_miss: 1
+      postgresql_vacuum_cost_page_dirty: 10
+      postgresql_vacuum_cost_limit: 1000
+      postgresql_log_min_duration_statement: 3000
