--- a/AnsProjects/roles/AdJoinUbuntu/tasks/main.yml
+++ b/AnsProjects/roles/AdJoinUbuntu/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: Ensure persistent routes to N3 networks are present 
   lineinfile:
      line: "{{item}}"
@@ -7,15 +8,16 @@
   with_items:
   - "up route add -net 192.168.8.0/24 gw {{n3gateway}}"
   - "up route add -net 10.16.16.0/24 gw {{n3gateway}}"
+  when: n3gateway is defined
   register: netconf
   tags: [configuration, net]
 
-- name: If persistent routes to N3 networks were not present, add temporary
+- name: If persistent routes to N3 networks were not present, add temporary ones
   command: "{{item}}"
   with_items:
   - "route add -net 192.168.8.0/24 gw {{n3gateway}}"
   - "route add -net 10.16.16.0/24 gw {{n3gateway}}"
-  when: netconf|changed
+  when: n3gateway is defined and netconf|changed
   ignore_errors: true
   tags: [configuration, net]
 
@@ -41,20 +43,7 @@
   when: item.value != ""
   tags: [configuration,dns]
 
-#This step is nesessary to prefent sudo from throwing error and preventing normal ansible work
-#- name: Set FQDN as hostname 1/2
-#  lineinfile:
-#   line: "127.0.1.1 {{ansible_hostname}}.{{domain_full_lowercase}}"
-#   path: "/etc/hosts"
-#  tags: [configuration,dns]
 
-#- name: Set FQDN as hostname 2/2
-#  hostname: 
-#      name: "{{ansible_hostname}}.{{domain_full_lowercase}}"
-#  tags: [configuration,dns]
-
-
-#Ntp-settings 
 - name: Install ntp
   apt: pkg=ntp state=present update_cache=yes
   tags: [packages,ntp]
@@ -86,14 +75,14 @@
 
 
 
-- name: Join Active Directory
+- name: Join Active Directory with adcli
   shell: "echo -n {{item.join_password}}|/usr/sbin/adcli join --domain={{item.name|lower}} --login-user={{item.join_account}} --os-name='{{ansible_distribution}} {{ansible_distribution_release}}' --os-version={{ansible_distribution_version}} --stdin-password"
   when: adcli_bound|failed
   register: ad_join
   with_items: "{{domains}}"
   tags: [configuration,ad]
 
-- name: Configure SSSD
+- name: Configure sssd.conf
   template: 
    src: sssd.conf.j2 
    dest: /etc/sssd/sssd.conf
